--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-bootstrap": "^1.5.1",
     "react-bootstrap-icons": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-fitted-image": "^1.0.1",
+    "react-phone-number-input": "^3.1.19",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1",
